WHAT IS NEW?

??? ? 202? [Ichorescent]

  *** New Features

   * New Plotscripting Features

  *** Changes

  *** Bugfixes
    * Various gfx_sdl2 window size/position and mouse glitches when exiting
      fullscreen [Ralph]

  *** Stuff Only Developers Will Notice


September 13 2021 [Hróðvitnir]

  *** New Features
    * Slice Editor:
      * Settings/tools menu (F8 to open). Lists most hotkeys. Includes new
        settings to show/hide the position and size of each slice. [Ralph]
      * Data organised into collapsible/expandable sections [Sword]
      * Press F in the slice editor to focus on a slice [Ralph]
      * Slice collections can be named. The name and collection ID are shown in
        the in-game slice debugger [Ralph]
      * In the position/size edit view hold Ctrl to change size/position instead
    * F8 debug menu option "Enable/Disable random battles" [Ralph]
    * Better, smoother screen fading in/out [Ralph]
    * Option (in General Settings Menu) to run in 24-bit color mode. Much nicer
      looking transparent sprites, but increases CPU usage [Ralph]
    * Attacks can have custom alignment relative to their targets [James]
    * There is now a global pool of NPC definitions that can be used on
      any map to supplement the local per-map NPCs [James]
    * Turn-based battle bit "Don't break Speed ties randomly" [Ralph]
    * "Ignore MP~ stat" general preference bit, so you can use the stat for
      something else [Ralph]
    * The new gfx_sdl2 and music_sdl2 backends based on SDL 2 & SDL_mixer 2 are
      now the default on Windows, 64-bit Mac and Linux/Unix. These fix many
      problems in gfx_sdl and music_sdl. gfx_sdl2 requires Windows XP or later.
      You can switch backend, to gfx_directx or (obsolete) gfx_fb, with Ctrl-F7.
      There's no reason to prefer music_sdl, but if you want to use gfx_sdl,
      which was the default on Unix/Linux/Mac and the default for Custom on